<resources>
    <string name="app_name">Note Sync</string>
    <string name="conectar">conectar</string>
    <string name= "imageView10">imagem10</string>
    <string name= "imageView6">imagem6</string>
    <string name= "voltar">voltar</string>
    <string name= "registrar">registrar</string>
    <string name="logo">Logo</string>
    <string name="login">login</string>
    <string name="npuc">Não possui uma conta?</string>
    <string name="cadastrese">Cadastre-se aqui</string>
    <string name="esqueceu">Esqueceu a senha?</string>
    <string name="conectse">Ou Conecte-se Com:</string>
    <string name="comunidade">comunidade</string>
    <string name="tema">temacor</string>
    <string name="titulo">Título</string>
    <string name="digite">Escreva aqui</string>
    <string name="notificacoes">notificações</string>
    <string name="lupa">pesquisa</string>
    <string name="criarnota">crianota</string>
    <string name="perfil">Seu Perfil</string>
    <string name="phone">Seu telefone</string>
    <string name="Amigos">Amigos</string>
    <string name="Email">Email</string>
    <string name="changepass">Mude sua Senha</string>
    <string name="passwordlogin">Senha</string>
    <string name="msgteste">Mensagem</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="favoritos">Favoritos</string>
    <string name="lixeira">Lixeira</string>
</resources>