<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe4c4"
    tools:layout_editor_absoluteX="-4dp"
    tools:layout_editor_absoluteY="2dp">

    <ImageView
        android:id="@+id/comunidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:contentDescription="@string/comunidade"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/comunidade" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:contentDescription="@string/notificacoes"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notificacao" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="36dp"
        android:layout_height="31dp"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:contentDescription="@string/lupa"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lero" />

    <FrameLayout
        android:id="@+id/botaoFiltroFavorito"
        android:layout_width="87dp"
        android:layout_height="27dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="116dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp">

        <ImageView
            android:id="@+id/FiltroFavorito"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/favoritos" />

        <TextView
            android:id="@+id/textoFavoritos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Favoritos"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold" />
    </FrameLayout>



    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:clickable="true"
        android:contentDescription="@string/criarnota"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mais" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/imageView20"
        app:layout_constraintTop_toBottomOf="@+id/botaoFiltroFavorito">

        <GridLayout
            android:id="@+id/containerNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:padding="8dp"
            android:useDefaultMargins="true" />
    </ScrollView>


    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/perfil"
        android:text="@string/perfil"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iconeperfil"
        android:layout_width="70dp"
        android:layout_height="76dp"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:contentDescription="@string/perfil"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/perfilicone" />

    <ImageView
        android:id="@+id/temachange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tema" />

</androidx.constraintlayout.widget.ConstraintLayout>